PAE-74 - Fixed text overflow on package installation report.

--- a/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/InstallExtensionModal/FileUpload/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/InstallExtensionModal/FileUpload/style.less
@@ -195,6 +195,9 @@
     background-color: white;
     .package-installation-report {
         padding: 25px;
+        p {
+            word-wrap: break-word;
+        }
         p.failure {
             color: @alizarinCrimson;
             font-weight: bold;
